# SDL2-CLion-Template

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
